--- a/project/server/package.json
+++ b/project/server/package.json
@@ -11,7 +11,6 @@
     "dotenv": "^10.0.0",
     "express": "^4.16.4",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.7.5",
-    "express": "^4.18.2"
+    "mongoose": "^5.7.5"
   }
 }
